spacing issues

--- a/text.css
+++ b/text.css
@@ -334,9 +334,9 @@ display: inline-block;
 #infoWrap #brandsWrap{
     
     width:100%;
-    height:auto;
+    height:130px;
     margin-top:40px;
-    padding-bottom:70px;
+    margin-bottom:30px;
 
 }
 
@@ -395,7 +395,7 @@ display: inline-block;
 #infoWrap #selctionroller{
     width:100%;
     height:30px;
-    margin-top:56px;
+    margin-top:0px;
     
 }
 #infoWrap #selctionroller ul{
@@ -505,6 +505,10 @@ background-size: cover;
     margin-top:4%;
     }
     
+    #infoWrap #brandsWrap{
+        height:100px;
+    }
+    
     #infoWrap #brandsWrap ul li.aboveThree{
         display:none;
     }
@@ -521,7 +525,7 @@ background-size: cover;
     
     #infoWrap{
         width:100%;
-    
+        height:350px;
     }
     
     #homeMain h1 #forInfluencers{
@@ -561,6 +565,11 @@ background-size: cover;
     header{
         padding-top:20px;
     }
+    
+    #infoWrap #selctionroller{
+    margin-top:0px;
+    }
+    
     
     #homeWrap #logo{
 
